--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
         <button id="btn"> Get Quote </button>
       </div>
     </div>
-    <script type="module" src="index.js"></script>
+    <script  src="index.js"></script>
   </body>
 </html>
